--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://pulkitclg.github.io/portfolio/",  
-  "name": "https://pulkitclg.github.io/portfolio/",
+  "name": "pulkitclg.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
